--- a/pro12/WebContent/WEB-INF/web.xml
+++ b/pro12/WebContent/WEB-INF/web.xml
@@ -9,4 +9,17 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
+  <!-- <error-page>태그를 이용해 각각의 에러코드에 대해 처리할 예외처리 페이지 경로 지정 -->
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/err/err_404.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>500</error-code>
+  	<location>/err/err_500.jsp</location>
+  </error-page>
+  
 </web-app>
