--- a/pro16/.classpath
+++ b/pro16/.classpath
@@ -13,5 +13,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/LSH-NB/Downloads/commons-io-2.8.0-bin/commons-io-2.8.0/commons-io-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/LSH-NB/Downloads/commons-fileupload-1.3-bin/commons-fileupload-1.3/lib/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/LSH-NB/Downloads/commons-fileupload-1.3-bin/taglibs-standard-compat-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/LSH-NB/Downloads/commons-fileupload-1.3-bin/taglibs-standard-impl-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/LSH-NB/Downloads/commons-fileupload-1.3-bin/taglibs-standard-jstlel-1.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/LSH-NB/Downloads/commons-fileupload-1.3-bin/taglibs-standard-spec-1.2.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
